--- a/compare-xlsx-service/pom.xml
+++ b/compare-xlsx-service/pom.xml
@@ -8,8 +8,8 @@
         <version>2.7.1</version>
         <relativePath/>
     </parent>
-    <groupId>com.fedorov</groupId>
-    <artifactId>compare-xlsx</artifactId>
+    <groupId>com.sf</groupId>
+    <artifactId>compare-xlsx-service</artifactId>
     <version>0.0.1</version>
     <name>compare-xlsx</name>
 
