--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,19 @@ services:
   weather-service:
     build: ./weather-service
     container_name: 'weather-service'
+    image: 'weather-service'
     networks:
       - postgres
 
   compare-xlsx-service:
     build: ./compare-xlsx-service
     container_name: 'compare-xlsx-service'
+    image: 'compare-xlsx-service'
 
   ui-service:
     build: ./ui-service
     container_name: 'ui-service'
+    image: 'ui-service'
     ports:
       - "80:8080"
 
