--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: 'weather-service'
     image: 'weather-service'
     networks:
-      - postgres
+      - "postgres"
 
   compare-xlsx-service:
     build: ./compare-xlsx-service
