--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.3'
+version: '3.9'
 
 networks:
-  postgres:
-    external:
-      name: postgres
+  frontend:
+    name: postgres
 
 
 services:
