--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     build: ./weather-service
     container_name: 'weather-service'
     image: 'weather-service'
-#    networks:
-#      - postgres
-
+    links:
+      - 'postgres:postgres
+      '
   compare-xlsx-service:
     build: ./compare-xlsx-service
     container_name: 'compare-xlsx-service'
