--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     container_name: 'weather-service'
     image: 'weather-service'
     links:
-      - 'postgres:postgres
-      '
+      - 'postgres:postgres'
+
   compare-xlsx-service:
     build: ./compare-xlsx-service
     container_name: 'compare-xlsx-service'
