--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: ./weather-service
     container_name: 'weather-service'
     image: 'weather-service'
+    links:
+      - 'postgres:postgres'
 
   compare-xlsx-service:
     build: ./compare-xlsx-service
