--- a/ui-service/src/main/resources/application.yml
+++ b/ui-service/src/main/resources/application.yml
@@ -2,4 +2,10 @@ app:
   feign:
     weather-service-url: weather-service:8080
     compare-xlsx-service-url: compare-xlsx-service:8080
-#    compare-xlsx-service-url: localhost:8081
+feign:
+  client:
+    config:
+      default:
+        loggerLevel: basic
+        connectTimeout: 20000
+        readTimeout: 100000
