--- a/ui-service/pom.xml
+++ b/ui-service/pom.xml
@@ -40,6 +40,11 @@
             <version>3.1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
