--- a/ui-service/pom.xml
+++ b/ui-service/pom.xml
@@ -11,11 +11,12 @@
 
     <groupId>com.sf</groupId>
     <artifactId>ui-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>service</name>
 
     <properties>
         <java.version>15</java.version>
+        <openfeign.version>3.1.4</openfeign.version>
     </properties>
 
     <dependencies>
@@ -37,14 +38,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>3.1.4</version>
+            <version>${openfeign.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
         </dependency>
-
     </dependencies>
 
     <build>
@@ -55,5 +55,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
