--- a/compare-xlsx-service/pom.xml
+++ b/compare-xlsx-service/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.1</version>
+        <version>2.7.3</version>
         <relativePath/>
     </parent>
+
     <groupId>com.sf</groupId>
     <artifactId>compare-xlsx-service</artifactId>
-    <version>0.0.1</version>
-    <name>compare-xlsx</name>
+    <version>1.0.0</version>
+    <name>compare-xlsx-service</name>
 
     <properties>
         <java.version>15</java.version>
@@ -80,5 +81,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
