--- a/ui-service/pom.xml
+++ b/ui-service/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.sf</groupId>
     <artifactId>ui-service</artifactId>
     <version>1.0.0</version>
-    <name>service</name>
+    <name>ui-service</name>
 
     <properties>
         <java.version>15</java.version>
