refactor compare-service

--- a/weather-service/Dockerfile
+++ b/weather-service/Dockerfile
@@ -21,7 +21,7 @@ COPY src/ /build/src/
 RUN mvn package
 
 # Step : Package image
-FROM openjdk:8-jre-alpine
+FROM osangenis/openjdk-18-go-1.16-alpine
 EXPOSE 4567
 CMD exec java $JAVA_OPTS -jar /app/my-app.jar
 COPY --from=target /build/target/*jar-with-dependencies.jar /app/my-app.jar
