--- a/weather-service/Dockerfile
+++ b/weather-service/Dockerfile
@@ -13,32 +13,32 @@
 #ENTRYPOINT java -jar /app/app.jar
 #****************
 
-FROM maven:3.6-adoptopenjdk-15 as target
-ENV HOME=/usr/app
-RUN mkdir -p $HOME
-WORKDIR $HOME
-COPY pom.xml .
-RUN mvn dependency:go-offline
-
-COPY src/ $HOME/src/
-RUN mvn package
-
-FROM openjdk:15
-EXPOSE 4567
-CMD exec java $JAVA_OPTS -jar /app/app.jar
-COPY --from=target $HOME/target/*.jar /app/app.jar
-
-#*****************
-#FROM maven:3.8.6-openjdk-18-slim as target
-#WORKDIR /build
+#FROM maven:3.6-adoptopenjdk-15 as target
+#ENV HOME=/usr/app
+#RUN mkdir -p $HOME
+#WORKDIR $HOME
 #COPY pom.xml .
 #RUN mvn dependency:go-offline
 #
-#COPY src/ /build/src/
+#COPY src/ $HOME/src/
 #RUN mvn package
 #
-## Step : Package image
-#FROM osangenis/openjdk-18-go-1.16-alpine
+#FROM openjdk:15
 #EXPOSE 4567
-#CMD exec java $JAVA_OPTS -jar /app/my-app.jar
-#COPY --from=target /build/target/*jar-with-dependencies.jar /app/my-app.jar
+#CMD exec java $JAVA_OPTS -jar /app/app.jar
+#COPY --from=target $HOME/target/*.jar /app/app.jar
+
+#*****************
+FROM maven:3.6-adoptopenjdk-15 as target
+WORKDIR /build
+COPY pom.xml .
+RUN mvn dependency:go-offline
+
+COPY src/ /build/src/
+RUN mvn package
+
+# Step : Package image
+FROM openjdk:15
+EXPOSE 4567
+CMD exec java $JAVA_OPTS -jar /app/app.jar
+COPY --from=target /build/target/*app.jar /app/app.jar
