--- a/ui-service/Dockerfile
+++ b/ui-service/Dockerfile
@@ -1,7 +1,5 @@
-FROM maven:3.8.6-openjdk-18-slim as target
-ENV HOME=/usr/app
-RUN mkdir -p $HOME
-WORKDIR $HOME
+FROM maven:3.6-adoptopenjdk-15 as target
+WORKDIR /build
 COPY pom.xml .
 RUN mvn dependency:go-offline
 
@@ -9,5 +7,5 @@ COPY src/ /build/src/
 RUN mvn package
 
 FROM openjdk:15
-COPY --from=build /usr/app/target/*.jar /app/app.jar
-ENTRYPOINT java -jar /app/app.jar
+CMD exec java $JAVA_OPTS -jar /app/my-app.jar
+COPY --from=target /build/target/*.jar /app/my-app.jar
