--- a/ui-service/docker-compose.yml
+++ b/ui-service/docker-compose.yml
@@ -12,3 +12,11 @@ services:
     image: 'ui-service'
     ports:
       - "80:8080"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: '256M'
+        reservations:
+          cpus: '0.10'
+          memory: '16M'
