--- a/weather-service/src/main/resources/application.yml
+++ b/weather-service/src/main/resources/application.yml
@@ -14,3 +14,9 @@ app:
     agent: Chrome/4.0.249.0 Safari/532.5
   cron:
     remote-call: 1 0/10 * * * *
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
