--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -17,4 +17,11 @@ services:
           memory: '256M'
         reservations:
           cpus: '0.10'
-          memory: '16M'
+          memory: '128M'
+    healthcheck:
+      test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
+      interval: 120s
+      retries: 5
+      start_period: 20s
+      timeout: 20s
+
