--- a/weather-service/pom.xml
+++ b/weather-service/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>jsoup</artifactId>
             <version>${jsop.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
