--- a/compare-xlsx-service/docker-compose.yml
+++ b/compare-xlsx-service/docker-compose.yml
@@ -5,7 +5,6 @@ networks:
     name: backend
 
 services:
-
   compare-xlsx-service:
     build: ./
     container_name: 'compare-xlsx-service'
@@ -18,4 +17,10 @@ services:
         reservations:
           cpus: '0.10'
           memory: '128M'
+    healthcheck:
+      test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
+      interval: 120s
+      retries: 5
+      start_period: 20s
+      timeout: 20s
 
