--- a/weather-service/src/main/resources/application.yml
+++ b/weather-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: always
   health:
     db:
       enabled: true
