--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -18,7 +18,7 @@ services:
           cpus: '0.10'
           memory: '128M'
     healthcheck:
-      test: "curl --fail --silent localhost:8080/api/db/health || exit 200"
+      test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
       interval: 120s
       retries: 5
       start_period: 20s
