--- a/ui-service/src/main/resources/application.yml
+++ b/ui-service/src/main/resources/application.yml
@@ -16,3 +16,10 @@ management:
     web:
       exposure:
         include: health
+  health:
+    db:
+      enabled: true
+    defaults:
+      enabled: true
+    diskspace:
+      enabled: true
