--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -19,8 +19,8 @@ services:
           memory: '128M'
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
-      interval: 120s
+      interval: "60s"
       retries: 5
-      start_period: 20s
-      timeout: 20s
+      start_period: "20s"
+      timeout: "20s"
 
