--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: 'weather-service'
     image: 'weather-service'
     deploy:
-      replicas: 1
+      replicas: 2
       restart_policy:
         condition: on-failure
         delay: 5s
@@ -23,10 +23,10 @@ services:
         reservations:
           cpus: '0.10'
           memory: '128M'
-#    healthcheck:
-#      test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
-#      interval: "60s"
-#      retries: 5
-#      start_period: "20s"
-#      timeout: "20s"
+    healthcheck:
+      test: "curl --fail http://localhost || exit 1"
+      interval: "60s"
+      retries: 5
+      start_period: "20s"
+      timeout: "20s"
 
