--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -24,7 +24,7 @@ services:
           cpus: '0.10'
           memory: '128M'
     healthcheck:
-      test: "curl --fail http://localhost || exit 1"
+      test: "curl --fail localhost:8080/actuator/health | grep UP || exit 1"
       interval: "60s"
       retries: 5
       start_period: "20s"
