add restart policy

--- a/weather-service/docker-compose.yml
+++ b/weather-service/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     deploy:
       replicas: 1
       restart_policy:
-        condition: on-failure
-        delay: 5s
+        condition: "on-failure"
+        delay: "20s"
         max_attempts: 3
-        window: 120s
+        window: "20s"
       resources:
         limits:
           cpus: '0.50'
@@ -25,7 +25,7 @@ services:
           memory: '128M'
     healthcheck:
       test: "curl --fail localhost:8080/actuator/health | grep UP || exit 1"
-      interval: "60s"
+      interval: "20s"
       retries: 5
       start_period: "20s"
       timeout: "20s"
