--- a/ui-service/pom.xml
+++ b/ui-service/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>15</java.version>
         <openfeign.version>3.1.4</openfeign.version>
+        <org.springdoc.version>1.6.11</org.springdoc.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${org.springdoc.version}</version>
         </dependency>
     </dependencies>
 
