--- a/compare-xlsx-service/docker-compose.yml
+++ b/compare-xlsx-service/docker-compose.yml
@@ -10,17 +10,24 @@ services:
     container_name: 'compare-xlsx-service'
     image: 'compare-xlsx-service'
     deploy:
+      replicas: 1
+      restart_policy:
+        condition: "on-failure"
+        delay: "20s"
+        max_attempts: 3
+        window: "20s"
       resources:
         limits:
           cpus: '0.50'
-          memory: '256M'
+          memory: '512M'
         reservations:
           cpus: '0.10'
-          memory: '128M'
+          memory: '32M'
     healthcheck:
-      test: "curl --fail --silent localhost:8080/actuator/health | grep UP || exit 1"
-      interval: "60s"
+      test: "curl --fail localhost:8080/actuator/health | grep UP || exit 1"
+      interval: "20s"
       retries: 5
       start_period: "20s"
       timeout: "20s"
+
 
