--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,9 @@ services:
         reservations:
           cpus: '0.10'
           memory: '32'
+      replicas: 1
+      restart_policy:
+        condition: "on-failure"
+        delay: "20s"
+        max_attempts: 3
+        window: "20s"
