--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.9'
+version: "3.9"
 
 networks:
   default:
@@ -7,21 +7,21 @@ networks:
 services:
 
   postgres:
-    image: 'postgres:14'
-    container_name: 'postgres'
+    image: "postgres:14"
+    container_name: "postgres"
     environment:
-      - 'POSTGRES_USER=postgres'
-      - 'POSTGRES_PASSWORD=root'
+      - "POSTGRES_USER=postgres"
+      - "POSTGRES_PASSWORD=root"
     ports:
       - "5432:5432"
     deploy:
       resources:
         limits:
-          cpus: '1'
-          memory: '256M'
+          cpus: "1"
+          memory: "256M"
         reservations:
-          cpus: '0.10'
-          memory: '32'
+          cpus: "0.10"
+          memory: "32"
       replicas: 1
       restart_policy:
         condition: "on-failure"
@@ -33,3 +33,26 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.0.1
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+
+  kafka:
+    image: confluentinc/cp-kafka:7.0.1
+    container_name: kafka
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
