--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,18 +21,7 @@ services:
           memory: "256M"
         reservations:
           cpus: "0.10"
-          memory: "32"
-      replicas: 1
-      restart_policy:
-        condition: "on-failure"
-        delay: "20s"
-        max_attempts: 3
-        window: "20s"
-    healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+          memory: "32M"
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -52,7 +41,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://broker:29092"
+      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092"
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
