--- a/kafka-test-producer/src/main/resources/application.yml
+++ b/kafka-test-producer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 app:
   kafka:
-#    server: kafka:29092
-    server: localhost:9092
+    server: kafka:29092
+#    server: localhost:9092
     group-id: test-group
