--- a/ui-service/pom.xml
+++ b/ui-service/pom.xml
@@ -18,6 +18,7 @@
         <java.version>15</java.version>
         <openfeign.version>3.1.4</openfeign.version>
         <org.springdoc.version>1.6.11</org.springdoc.version>
+        <postgres.version>42.5.0</postgres.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres.version}</version>
         </dependency>
     </dependencies>
 
