--- a/tinkoff-investment-bot/src/main/resources/application.yml
+++ b/tinkoff-investment-bot/src/main/resources/application.yml
@@ -1,5 +1,7 @@
+spring:
+  config:
+    import: file:../server-project/env.properties
 app:
-  kafka:
-    server: kafka:29092
-#    server: localhost:9092
-    group-id: test-group
+  key:
+    sandbox: ${SANDBOX}
+    read-only: ${READ_ONLY}
