--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.9"
 
 networks:
   default:
-    name: backend
+    name: "backend"
 
 services:
 
   postgres:
-    image: "postgres:14"
+    image: "postgres:latest"
     container_name: "postgres"
     environment:
       - "POSTGRES_USER=postgres"
